--- a/.gitignore
+++ b/.gitignore
@@ -34,11 +34,7 @@ captures/
 
 # Intellij
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/dictionaries
-.idea/libraries
+.idea/
 
 # Keystore files
 *.jks
@@ -48,6 +44,9 @@ captures/
 
 # Google Services (e.g. APIs or Firebase)
 google-services.json
+
+# macOS files
+.DS_Store
 
 # Freeline
 freeline.py
